--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,6 @@ lib_deps =
 	madhephaestus/ESP32Encoder@^0.9.2
 	lennarthennigs/Button2@^2.0.1
 monitor_speed = 115200
-upload_protocol = espota
-upload_port = 192.168.0.88
+; upload_protocol = espota
+; upload_port = 192.168.0.88
 upload_resetmethod=nodemcu
